# gamesh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.c
docs/: CMakeLists.txt  mainpage.md
include/gamesh/: con_queue.h  human_input.h  image_rec.h  lib.h  message.h  msg_aggregator.h  template_event.h  window.h
res/image/: licenses.txt
src/: CMakeLists.txt  con_queue.c  human_input.c  image_rec.c  lib.c  message.c  msg_aggregator.c  template_event.c  window.c
tests/: CMakeLists.txt  test_con_queue.c  test_human_input.c  test_image_rec.c  test_lib.c  test_message.c  test_misc.c  test_msg_aggregator.c  test_template_event.c  test_window.c  testlib.c
